<resources>
    <string name="app_name">Trivia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="play">Play</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="greeting">Hi,</string>
    <string name="select_category">Select an category:</string>
    <string name="start">Start</string>
    <string name="type">Type</string>
    <string name="difficulty">Difficulty</string>
    <string name="amount">Amount</string>

    <string name="username_example">SoyMulti</string>
    <string name="question_example">Which of the following Inuit languages was the FIRST to use a unique writing system not based on the Latin alphabet?</string>
    <string name="next">Next</string>

    <string-array name="Amounts">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="Difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="Types">
        <item>Multiple Choice</item>
        <item>True / False</item>
    </string-array>
</resources>